# Sports-tracking

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
config/: badminton.json  badminton_bev_map.json
doc/: documentation.md
include/: detector.h  file_io.h  timer.h
src/: detector.cpp  file_io.cpp  timer.cpp
